# CrossComms

./: .gitignore  README.md  app.py  languages.json  pyproject.toml  setup.bat  setup.ps1
src/gamevoice/: __init__.py  app.py  cache.py  config.py  languages.py  models.py  pipeline.py  push_to_talk.py
src/gamevoice/audio/: __init__.py  devices.py  input.py  output.py
src/gamevoice/comms/: __init__.py  normalizer.py
src/gamevoice/providers/: __init__.py  base.py  edge_neural_tts.cjs  edge_neural_tts.py  fallback.py  faster_whisper_recognizer.py  mock.py  opus_mt.py  piper_tts.py  utterances.py  web.py  windows_sapi_tts.ps1  windows_speech.py  windows_speech_transcribe.ps1  windows_tts.py
tests/: test_audio_output.py  test_config.py  test_fallback_translator.py  test_faster_whisper_recognizer.py  test_languages.py  test_normalizer.py  test_opus_mt.py  test_pipeline.py  test_web_providers.py  test_windows_speech.py
